crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__number_literal_recovery_7.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_expr_string(\"0e0\")"
---
Node {
    node: NumberLit(
        NumberLit {
            binary_suffix: None,
            value: Float(
                0.0,
            ),
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 3,
}
