crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__paren_recovery_0.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_expr_string(\"(a\")"
---
Node {
    node: Paren(
        ParenExpr {
            expr: Node {
                node: Identifier(
                    Identifier {
                        names: [
                            Node {
                                node: "a",
                                filename: "",
                                line: 1,
                                column: 1,
                                end_line: 1,
                                end_column: 2,
                            },
                        ],
                        pkgpath: "",
                        ctx: Load,
                    },
                ),
                filename: "",
                line: 1,
                column: 1,
                end_line: 1,
                end_column: 2,
            },
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 2,
}
