crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__paren_recovery_2.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_expr_string(r#\"(\"#)"
---
Node {
    node: Paren(
        ParenExpr {
            expr: Node {
                node: Missing(
                    MissingExpr,
                ),
                filename: "",
                line: 1,
                column: 1,
                end_line: 1,
                end_column: 1,
            },
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 1,
}
